# hatchery

./: Cargo.toml  Makefile
.github/workflows/: build.yml
dallo/: Cargo.toml
dallo/src/: boxed.rs  debug.rs  guest_mem.rs  handlers.rs  helpers.rs  lib.rs  memory.rs  state.rs  types.rs
hatchery/: Cargo.toml
hatchery/src/: env.rs  error.rs  instance.rs  lib.rs  memory.rs  session.rs  snapshot.rs  snapshot_bag.rs  storage_helpers.rs  world.rs  world_snapshot.rs
hatchery/src/snapshot/: mod.rs  module_snapshot.rs  module_snapshot_bag.rs  module_snapshot_data.rs  snapshot_data.rs
hatchery/src/world/: event.rs  store.rs
hatchery/tests/: .#callcenter.rs  .#stacked.rs  boxen.rs  callcenter.rs  counter.rs  events.rs  fibonacci.rs  height.rs  points.rs  self_snapshot.rs  snapshot.rs  stacked.rs  vector.rs
host-alloc/: Cargo.toml  Makefile
host-alloc/host-alloc/: Cargo.toml
host-alloc/host-alloc-contract/: Cargo.toml
host-alloc/host-alloc-contract/src/: lib.rs
host-alloc/host-alloc/src/: lib.rs
modules/box/: Cargo.toml
modules/box/src/: lib.rs
modules/box/vector/src/: lib.rs
modules/callcenter/: Cargo.toml
modules/callcenter/src/: lib.rs
modules/counter/: Cargo.toml
modules/counter/src/: lib.rs
modules/debugger/src/: lib.rs
modules/eventer/: Cargo.toml
modules/eventer/src/: lib.rs
modules/everest/: Cargo.toml
modules/everest/src/: lib.rs
modules/fibonacci/: Cargo.toml
modules/fibonacci/src/: lib.rs
modules/host/src/: lib.rs
modules/self_snapshot/: Cargo.toml
modules/self_snapshot/src/: lib.rs
modules/spender/: Cargo.toml
modules/spender/src/: lib.rs
modules/stack/: Cargo.toml
modules/stack/src/: lib.rs
modules/vector/: Cargo.toml
modules/vector/src/: lib.rs
src/: error.rs  lib.rs  storage_helpers.rs  world.rs
tests/: boxen.rs  callcenter.rs  counter.rs  vector.rs
uplink/: Cargo.toml
uplink/src/: handlers.rs  state.rs
vmx/: Cargo.toml
vmx/src/: commit.rs  error.rs  imports.rs  instance.rs  lib.rs  linear.rs  memory_handler.rs  memory_path.rs  metering.rs  module.rs  session.rs  store.rs  types.rs  util.rs  vm.rs  vm_linear_memory.rs
vmx/tests/: box.rs  counter.rs  custom_tunables.rs  session_commit.rs
