[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rkyv = "0.7.38"
#wasmer = "2.3.0"
#wasmer-vm = "2.3.0"
wasmer = { path = "../dusk-wasmer/lib/api" }
wasmer-vm = { path = "../dusk-wasmer/lib/vm" }
dallo = { path = "dallo" , default_features = false }
blake3 = "1.3.1"
tempfile = { version = "3.2.0", optional = true }

[workspace]
members = [
    "dallo",
    "modules/counter",
    "modules/vector",
    "modules/box",
    "modules/callcenter",  
]
