[package]
name = "hatchery"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"

[dependencies]
colored = "2.0.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
wasmer = "3.0.0-beta"
wasmer-vm = "3.0.0-beta"
wasmer-middlewares = "3.0.0-beta"
wasmer-compiler-singlepass = "3.0.0-beta"
dallo = { path = "../dallo" }
blake3 = "1.3.1"
parking_lot = "0.12.1"
tempfile = "3.2.0"
