[package]
name = "vmx"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer-vm = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer-types = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer-compiler-singlepass = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "dafdd94" }
bytecheck = "0.6"
rkyv = { version = "0.7", features = ["validation"] }

uplink = { path = "../uplink" }
parking_lot = "0.12.1"
libc = { version = "^0.2", default-features = false }
region = { version = "3.0" }
tempfile = "3.2.0"
rand = "0.8.5"
